// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/index combines other reducers 1`] = `[Function]`;

exports[`reducers/index has a default state 1`] = `
Object {
  "app": Object {
    "isHamburgerMenuExpanded": false,
    "isMapDialogOpened": false,
    "showError": true,
  },
  "auth": false,
  "data": Object {
    "isLoading": false,
    "items": Array [],
  },
  "filters": Object {
    "dateFilter": Object {
      "custom": Object {
        "endDate": null,
        "startDate": null,
      },
      "isCustomSelected": false,
      "timePeriod": Object {
        "isActive": false,
        "isDisabled": false,
        "isLoading": false,
        "items": Array [],
        "selectedItem": null,
      },
    },
    "items": Array [],
    "thingFilter": Object {
      "isActive": false,
      "isDisabled": false,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "thing",
        "date",
      ],
    },
  },
  "params": Object {
    "FIRST_PARAM": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "SECOND_PARAM": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
  },
  "request": Object {
    "error": null,
    "pending": 0,
    "statusCode": null,
  },
  "things": Object {
    "items": Array [],
    "selectedItem": null,
    "showNotFoundError": false,
  },
}
`;

exports[`reducers/index reduces nothing 1`] = `
Object {
  "app": Object {
    "isHamburgerMenuExpanded": false,
    "isMapDialogOpened": false,
    "showError": true,
  },
  "auth": "AUTH",
  "data": Object {
    "isLoading": false,
    "items": Array [],
  },
  "filters": Object {
    "dateFilter": Object {
      "custom": Object {
        "endDate": null,
        "startDate": null,
      },
      "isCustomSelected": false,
      "timePeriod": Object {
        "isActive": false,
        "isDisabled": false,
        "isLoading": false,
        "items": Array [],
        "selectedItem": null,
      },
    },
    "items": Array [],
    "thingFilter": Object {
      "isActive": false,
      "isDisabled": false,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "thing",
        "date",
      ],
    },
  },
  "params": Object {
    "FIRST_PARAM": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "SECOND_PARAM": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
  },
  "request": "REQUEST",
  "things": Object {
    "items": Array [],
    "selectedItem": null,
    "showNotFoundError": false,
  },
}
`;

exports[`reducers/index reduces other actions 1`] = `
Object {
  "app": Object {
    "isHamburgerMenuExpanded": false,
    "isMapDialogOpened": false,
    "showError": true,
  },
  "auth": "STATE",
  "data": Object {
    "isLoading": false,
    "items": Array [],
  },
  "filters": Object {
    "dateFilter": Object {
      "custom": Object {
        "endDate": null,
        "startDate": null,
      },
      "isCustomSelected": false,
      "timePeriod": Object {
        "isActive": false,
        "isDisabled": false,
        "isLoading": false,
        "items": Array [],
        "selectedItem": null,
      },
    },
    "items": Array [],
    "thingFilter": Object {
      "isActive": false,
      "isDisabled": false,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "thing",
        "date",
      ],
    },
  },
  "params": Object {
    "FIRST_PARAM": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "SECOND_PARAM": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
  },
  "request": "REQUEST",
  "things": Object {
    "items": Array [],
    "selectedItem": null,
    "showNotFoundError": false,
  },
}
`;
